# FuseBox

./: .gitignore  Claude-Innovative feature brainstorming for Claude Code.md  all-skills-combined.md  envoy-egress-proxy.yaml  firecracker-vm-config.json  main.rs  missing-pieces.txt
.omo/: explore-agent-report.md  research-agent-report.md
.omo/plans/: 2026-06-29-fusebox-sandbox.md
feature-ideation-skill/feature-ideation/references/: inspiration.md
sandbox/: Makefile  README.md  start.sh  test.sh
sandbox/certs/ca/: egress-ca.key  egress-gateway-ca-production.pem
sandbox/certs/guest/: ca-certificates.crt
sandbox/firecracker/: launch.sh  snapshot.sh  vm-config.json
sandbox/initrd/: build-initrd.sh  initrd.img  mount-config.json
sandbox/kernel/: build-kernel.sh  microvm.config
sandbox/network/: setup-tap.sh  teardown-tap.sh
sandbox/process_api/: Cargo.toml
sandbox/process_api/src/: main.rs
sandbox/proxy/: envoy.yaml  generate-ca.sh
sandbox/proxy/sds-server/: go.mod  go.sum  main.go
sandbox/rclone/: build-rclone-stub.sh  mount-local.sh
sandbox/rootfs/: Dockerfile  build-rootfs.sh  setup-users.sh
sandbox/skills/: build-skills.sh  extract-skills.sh  skills-examples.squashfs  skills-public.squashfs
sandbox/skills/examples/algorithmic-art/: SKILL.md
sandbox/skills/examples/benepass-reimbursement/: SKILL.md
sandbox/skills/examples/brand-guidelines/: SKILL.md
sandbox/skills/examples/call-to-book/: SKILL.md
sandbox/skills/examples/cancel-unsubscribe/: SKILL.md
sandbox/skills/examples/canvas-design/: SKILL.md
(+28 files in other folders)
