[package]
name = "process_api"
version = "0.1.0"
edition = "2021"
description = "Firecracker microVM sandbox supervisor — PID 1 init + WebSocket API"

[dependencies]
tokio = { version = "1.41", features = ["full"] }
tokio-tungstenite = "0.24"
hyper = { version = "1.6", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
http-body-util = "0.1"
jsonwebtoken = "9.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
nix = { version = "0.29", features = ["process", "signal", "mount"] }
clap = { version = "4.5", features = ["derive"] }
ring = "0.17"
mio = "1.0"
rand = "0.8"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
bytes = "1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = "s"
lto = true
strip = true
